--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: My website
+title: Bonnington Quarry Objection Information
 
 # Your name to show in the footer
-author: Some Person
+author: Iain MacLeod
 
 ###############################################
 # --- List of links in the navigation bar --- #
