--- a/_config.yml
+++ b/_config.yml
@@ -50,9 +50,9 @@ round-avatar: true
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
-#  facebook: deanattali
+ # email: "someone@example.com"
+ # rss: true  # remove this line if you don't want to show an RSS link at the bottom
+   facebook: STOP-the-Bonnington-Quarry-Expansion
 #  github: daattali
 #  twitter: daattali
 #  patreon: DeanAttali
