--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-#url-pretty: "MyWebsite.com"
+url-pretty: "MyWebsite.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
@@ -259,13 +259,15 @@ date_format: "%B %-d, %Y"
 
 # Output options (more information on Jekyll's site)
 timezone: "America/Toronto"
-markdown: kramdownjjj
+markdown: kramdown
+
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
 
 kramdown:
   input: GFM
+  toc_levels: 1..3
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
