--- a/_config.yml
+++ b/_config.yml
@@ -267,6 +267,7 @@ paginate: 5
 
 kramdown:
   input: GFM
+  auto_ids: true
   toc_levels: 1..3
 
 # Default YAML values (more information on Jekyll's site)
