--- a/_config.yml
+++ b/_config.yml
@@ -267,8 +267,10 @@ paginate: 5
 
 kramdown:
   input: GFM
-  auto_ids: true
+  hard_wrap: false
+  syntax_highlighter: rouge
   toc_levels: 1..3
+
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
